# heytea-cup-label-drawer

./: .gitignore  README.md  heytea_cup_label_drawer_gui.py  pyproject.toml
heytea_cup_label_drawer/: __init__.py  anilines.py  anime2sketch.py  automation.py  config.py  gui.py  informative_drawings.py  main.py  processing.py
models/: README.md
tests/: test_automation.py  test_main.py  test_processing.py
